# KatanaOpenAssetIO

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  KatanaOpenAssetIOPatches.py  OpenAssetIOAsset.hpp  OpenAssetIOPlugin.cpp  OpenAssetIOWidgetDelegate.py  PublishStrategies.cpp  PublishStrategies.hpp  constants.hpp  logging.hpp  traits.yml  utilities.cpp  utilities.hpp
tests/: CMakeLists.txt  OpenAssetIOPluginTest.cpp  main.cpp
tests/resources/: bal_db_GafferThree_rig_publishing.json  bal_db_Katana_scene_publishing.json  bal_db_LiveGroup_publishing.json  bal_db_LookFileManager_settings_publishing.json  bal_db_LookFileMaterialsOut_publishing.json  bal_db_Render_publishing.json  bal_db_UsdLayerExport_publishing.json  bal_db_fcurve_publishing.json  bal_db_macro_publishing.json  bal_db_scene_graph_bookmarks_publishing.json  bal_db_simple_image.json  openassetio_config.toml  requirements.txt
